generating http clients using swagger
